plugins {
    id 'groovy'
    id 'java'
    id 'org.jetbrains.intellij' version '0.7.3'
}

group 'io.github.zjay'
version '2022.12.12'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    compile 'com.alibaba:fastjson:1.2.83'
    compile 'cn.hutool:hutool-all:5.7.9'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java', "org.intellij.plugins.markdown"]
    version '2021.3'//2021.3、2021.1、2020.3.4
    updateSinceUntilBuild false
    downloadSources true
}
patchPluginXml {
    changeNotes """

    <h3>v2022.11.9</h3>
    <ul>
            <li>1、You can choose whether to display the complete url（Full url：http(s)://...）</li>
            <li>2、Add the Focus location button to locate the method line corresponding to the current request url</li>
            <li>3、URL supports parsing constant combination（example：@RequestMapping(value=Constant.PREFIX + "/xxx" + Constant.TARGET + "/yyy")）</li>
            <li>4、Free to use external complete url request</li>
            <li>5、The Api page adds a direct request button. You can jump to the specified method and complete a saved request</li>
            <li>6、Remove the background color of the request type (the color looks uncomfortable and returns to nature)</li>
            <li>7、The buttons are simple, and the interface looks simple and easy to operate</li>
            <li>8、Search the request page and add tags to display classes and interfaces to distinguish between feign interfaces, etc</li>
        </ul>
    
    """
}
test {
    useJUnitPlatform()
}
runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
    jbrVersion 'jbrsdk-11_0_10-osx-x64-b1314.58'
}

runPluginVerifier {
    ideVersions = ["IIU-2020.3.1", "IIU-2021.2.1"]
//  https://github.com/JetBrains/intellij-plugin-verifier/releases
//  https://data.services.jetbrains.com/products?code=IIU
    verifierPath = '/Users/wilson/Downloads/verifier-cli-1.266-all.jar'
}
